fix: Fix the position of colour name when it overflows to next line

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #212121;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
 }
 
 code {
